objects/Beer_Order__c.object
<CustomObject>
    <fields>
        <fullName>Beer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Beer</label>
        <referenceTo>Beer__c</referenceTo>
        <relationshipLabel>Beer Order</relationshipLabel>
        <relationshipName>Beer_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Address</label>
        <referenceTo>Address_Book__c</referenceTo>
        <relationshipLabel>Beer Order (Bill To Address)</relationshipLabel>
        <relationshipName>Beer_Order1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Amount__c</fullName>
        <label>Order Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ordered_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ordered By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Beer_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ordered_Quantity__c</fullName>
        <label>Ordered Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Address</label>
        <referenceTo>Address_Book__c</referenceTo>
        <relationshipLabel>Beer Order</relationshipLabel>
        <relationshipName>Beer_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Beer Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ORD - {0000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beer Order</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>